# volcls

./: README.md  pyproject.toml
data/eval/en/: ani.labeled.test.jsonl  ani.labeled.val.jsonl  ani.unlabeled.test.jsonl  ani.unlabeled.val.jsonl  vol.labeled.test.jsonl  vol.labeled.val.jsonl  vol.unlabeled.test.jsonl  vol.unlabeled.val.jsonl
data/eval/ja/: ani.labeled.test.jsonl  ani.labeled.val.jsonl  ani.unlabeled.test.jsonl  ani.unlabeled.val.jsonl  vol.labeled.test.jsonl  vol.labeled.val.jsonl  vol.unlabeled.test.jsonl  vol.unlabeled.val.jsonl
scripts/: extract_event.mk
src/: assign_sample.py  create_training_dataset.py  extract_event.py  summarize_result.py  test.py  train.py
src/labeling/: extractor.py  labeler.py
src/modules/: data_modules.py  dataset.py  functions.py  layers.py  models.py  modules.py  utils.py
src/utils/: utils.py
